[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ui/EquipmentPro.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/leader_selection/leader_select_item.gd" type="Script" id=8]
[ext_resource path="res://ui/buttons/leader_button.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=34]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=35]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=36]
extra_spacing_top = -3
extra_spacing_bottom = -3
extra_spacing_char = -3
extra_spacing_space = -3
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=33]
content_margin_left = 2.0
bg_color = Color( 0.74902, 0.207843, 0.207843, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[node name="leader_select_item" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -384.0
margin_bottom = -550.0
custom_styles/panel = SubResource( 34 )
script = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 211.0
margin_bottom = 65.0

[node name="leader_button" parent="HBoxContainer" instance=ExtResource( 9 )]

[node name="leader_name" type="Label" parent="HBoxContainer"]
margin_left = 64.0
margin_right = 206.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 35 )
text = "LEADER NAME"
align = 1
valign = 1

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 211.0
margin_bottom = 21.0
size_flags_vertical = 0
alignment = 2

[node name="delete_button" type="Button" parent="VBoxContainer"]
margin_left = 190.0
margin_right = 206.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/hseparation = 0
custom_fonts/font = SubResource( 36 )
custom_styles/hover = SubResource( 33 )
custom_styles/pressed = SubResource( 33 )
custom_styles/focus = SubResource( 33 )
custom_styles/disabled = SubResource( 33 )
custom_styles/normal = SubResource( 33 )
text = "X"

[connection signal="pressed" from="VBoxContainer/delete_button" to="." method="_on_x_button_pressed"]
